# TAPLite

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TF_for_optimization.ipynb  setup.py
.github/: build-linux.yml
.github/workflows/: build-linux.yml  build-macos-arm.yml  build-macos-x64.yml  build-windows.yml
TAPLite/: TAPLite.cpp  TAPLite.h
data/02_Sioux_Falls/minimum_input/: od_performance.csv  summary_log_file.txt
data_sets/01_4_node_network/minimum_input_ODME/: ODME_log.txt  link.csv  od_performance.csv  route_assignment.csv  summary_log_file.txt
data_sets/01_4_node_network/minimum_input_multi_modal/: link_performance_b.csv
data_sets/02_Sioux_Falls/minimum_input/: link.csv  (+3 more)
data_sets/03_chicago_sketch/: sample_settings.csv
data_sets/05_I10_corridor_QVDF/: link.csv
data_sets/I10_QVDF_benchmark/: link.csv
data_sets/chicago_regional/: link.csv  settings.csv  summary_log_file.txt
data_sets/mapmatching/: link.csv  node.csv  trace.csv
python/: TAPLite_v2.py  accessibility_matrix.csv  gmnsTest.py  link.csv  logfile.txt  node.csv  route_assignment.csv
python/SF/: od_performance.csv  settings.csv
python_source_code/: GMNS_learning.py  TAPLite.py  TAPLitePy.py  accessibility_matrix.csv  activity_node_comparison.py  agent.csv  demand.csv  link.csv  node.csv  osm2gmns_test.py  route_assignment.csv
python_source_code/SF/: route_assignment.csv  summary_log_file.txt  tensor_based_ODME.py
src/: TAPLite.cpp  TAPLite.h
taplite/: __init__.py  libtaplite_arm.dylib  libtaplite_x64.dylib  taplite.py
tests/: conftest.py  test_taplite.py
